--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   otp_text_field: ^1.1.3
   mqtt_client: ^10.8.0
   lottie: ^3.3.1
+  equatable: ^2.0.7
 
 
 dev_dependencies:
@@ -89,8 +90,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
+  fonts:
+    - family: Technology
+      fonts:
+        - asset: assets/fonts/Technology-Bold.ttf
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
