--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,12 @@ dependencies:
   mqtt_client: ^10.8.0
   lottie: ^3.3.1
   equatable: ^2.0.7
+  connectivity_plus: ^6.1.4
+  flutter_slidable: ^4.0.0
+  flutter_sound: ^9.28.0
+  permission_handler: ^12.0.0+1
+  file_picker: ^10.1.6
+  just_audio: ^0.10.2
 
 
 dev_dependencies:
